# arena-allocator

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
benchmarks/: bench.cpp
include/: arena.hpp
src/: main.cpp
tests/: stress_test.cpp
